# synth

./: .gitignore  CMakeLists.txt  Makefile  README.md  synth.sublime-project
src/: Synth.cpp  Synth.hpp  Util.hpp  main.cpp
src/MIDI/: Message.cpp  Message.hpp  Reciever.cpp  Reciever.hpp  Tuner.cpp  Tuner.hpp
src/Modules/Core/: PulseOutput.cpp  PulseOutput.hpp  Voice.cpp  Voice.hpp  VoiceManager.cpp  VoiceManager.hpp
src/Modules/Effects/: Delay.cpp  Delay.hpp  Filter.cpp  Filter.hpp
src/Modules/Envelopes/: Envelope.cpp  Envelope.hpp
src/Modules/Generators/: Oscillator.cpp  Oscillator.hpp
src/midi/: device.hpp  input.hpp  message.hpp  prober.hpp  protocol.hpp  types.hpp
src/midi/devices/: alsa.hpp  base.hpp  fs.hpp  oss.hpp  wmm.hpp
src/midi/messages/: base.hpp  builder.hpp  channel_pressure.hpp  control_change.hpp  note_off.hpp  note_on.hpp  pitch_bend.hpp
